--- a/css/variables.css
+++ b/css/variables.css
@@ -1,18 +1,14 @@
-.selector-for-some-widget {
-    box-sizing: content-box;
-}
-
-/*Extra small devices (portrait phones, less than 576px)*/
-@media (max-width: 575.98px) { ... }
-
-/*Small devices (landscape phones, 576px and up)*/
-@media (min-width: 576px) and (max-width: 767.98px) { ... }
-
-/*Medium devices (tablets, 768px and up)*/
-@media (min-width: 768px) and (max-width: 991.98px) { ... }
-
-/*Large devices (desktops, 992px and up)*/
-@media (min-width: 992px) and (max-width: 1199.98px) { ... }
-
-/*Extra large devices (large desktops, 1200px and up)*/
-@media (min-width: 1200px) { ... }
+:root{
+    --red: #e80d0d;
+    --orange: #f98500;
+    --yellow: #ffc600;
+    --green: #10a503;
+    --blue-green: #0ed6a4;
+    --blue: #0071b2;
+    --purple: #6a00b2;
+    --brown: #6d6656;
+    --grey: #53565A;
+    --black: #272727;
+  
+    --font-one: 'Inconsolata', monospace;
+  }
